--- a/mssql-secret.yaml
+++ b/mssql-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mssql-secret
-  namespace: confluence 
+  namespace: mssql
 type: Opaque
 data:
   MSSQL_SA_PASSWORD: U3FsMjAxOWlzZmFzdA==
